syntax="proto3";

service CaseLocalAlarmsService {
   rpc getCaseLocalAlarms(CaseLocalAlarmsRequest) returns (CaseLocalAlarmsResponse){}
}

message CaseLocalAlarmsRequest {
   string customerCase = 1;
}

message CaseLocalAlarmsResponse {
   map<string, Alarm> alarms = 1;
   map<string, Settings> settings=2;
}

message Alarm {
   string type = 1;
   AlarmValue value = 2;
}

message Settings {
   optional double ecgGain=1;
   optional double measuringFrequency=2;
   optional string isMeasuringFrequencyOn=3;
   string monitoringType = 4;
   repeated Time monitoringTimes = 5;
   MonitoringFrequency monitoringFrequency = 6;
}

message AlarmValue {
   optional double min = 1;
   optional double max = 2;
   optional double val = 3;
   optional AlarmValue systolic = 4;
   optional AlarmValue diastolic = 5;
}

message Time {
   int32 hour = 1;
   int32 min = 2;
   string ampm = 3;
}

message MonitoringFrequency {
   int32 duration=1;
   string durationUnits=2;
   int32 periodicity=3;
   string periodicityUnits=4;
}